Add more arrows

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
       margin: auto;
       background: url('https://thumbs.gfycat.com/FaintHonestAuklet-size_restricted.gif');
       background-size: cover;
-
     }
 
+    #space {
+      height: 100px;
+    }
     .wrapper {
       background-color: black;
       height: 100vh;
@@ -53,7 +55,7 @@
 
   <img id="background" src="/images/background.png">
 
-  <div></div>
+  <div id="space"></div>
   <div class="wrapper" background-color="blue">
     <canvas id="gameScreen" width="800" height="800"></canvas>
   </div>
