--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 </head>
 <body>
 
-  <img id="leftArrow" src="/images/ddrLeftArrow.png">
-  <img id="upArrow" src="/images/ddrUpArrow.png">
-  <img id="downArrow" src="/images/ddrDownArrow.png" >
-  <img id="rightArrow" src="/images/ddrRightArrow.png" >
+  <img id="leftArrow" src="/images/LeftArrow.png">
+  <img id="upArrow" src="/images/UpArrow.png">
+  <img id="downArrow" src="/images/DownArrow.png" >
+  <img id="rightArrow" src="/images/RightArrow.png" >
   
 
   <img id="fallingLeftArrow" src="/images/fallingLeftArrow.png">
