--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     }
 
   </script>
-  <script type="module" src="src/index.js"></script>
+  <script type="module" src="./src/index.js"></script>
   
 </body>
 </html>
