--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 </head>
 <body>
 
-  <img id="leftArrow" src="/images/LeftArrow.png">
-  <img id="upArrow" src="/images/UpArrow.png">
-  <img id="downArrow" src="/images/DownArrow.png" >
-  <img id="rightArrow" src="/images/RightArrow.png" >
+  <img id="leftArrow" src="./images/LeftArrow.png">
+  <img id="upArrow" src="./images/UpArrow.png">
+  <img id="downArrow" src="./images/DownArrow.png" >
+  <img id="rightArrow" src="./images/RightArrow.png" >
   
 
-  <img id="fallingLeftArrow" src="/images/fallingLeftArrow.png">
-  <img id="fallingUpArrow" src="/images/fallingUpArrow.png">
-  <img id="fallingDownArrow" src="/images/fallingDownArrow.png">
-  <img id="fallingRightArrow" src="/images/fallingRightArrow.png">
+  <img id="fallingLeftArrow" src="./images/fallingLeftArrow.png">
+  <img id="fallingUpArrow" src="./images/fallingUpArrow.png">
+  <img id="fallingDownArrow" src="./images/fallingDownArrow.png">
+  <img id="fallingRightArrow" src="./images/fallingRightArrow.png">
 
 
-  <img id="background" src="/images/background.png">
+  <img id="background" src="./images/background.png">
 
   <div id="space"></div>
   <div class="wrapper" background-color="blue">
@@ -63,7 +63,7 @@
   <!-- <canvas id="text" width="100" height="100"></canvas> -->
 
   <script allow="autoplay" playsinline="true" autoplay="" muted="muted">
-    let audio = new Audio('/songs/Cascada.mp3');
+    let audio = new Audio('./songs/Cascada.mp3');
     audio.volume = 0.2
     let count = 0;
     function playAudio() {
