--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     #title-text {
       font-family: 'orbitron';
-      text-shadow: 1px 1px 50px rgb(54, 232, 255), 0 0 1em rgb(3, 166, 241), 0 0 0.2em rgb(3, 250, 250);
+      text-shadow: 1px 1px 2px rgb(54, 232, 255), 0 0 1em rgb(0, 103, 151), 0 0 0.2em rgb(18, 0, 122);
     }
 
     .wrapper {
@@ -74,7 +74,7 @@
       font-family: 'orbitron';
       cursor: pointer;
       /* text-shadow: 10px 10px 10px rgba(0,0,0,.5), 20px 20px 20px rgba(0,0,0,.4), 30px 30px 30px rgba(0,0,0,.1); */
-      text-shadow: 1px 1px 50px rgb(54, 232, 255), 0 0 1em rgb(3, 166, 241), 0 0 0.2em rgb(3, 250, 250);
+      text-shadow: 1px 1px 2px rgb(54, 232, 255), 0 0 1em rgb(0, 103, 151), 0 0 0.2em rgb(18, 0, 122);
     }
 
     #Enter:hover {
@@ -101,6 +101,7 @@
 
     #instructions > h1 {
       text-decoration: underline;
+      text-shadow: 1px 1px 2px rgb(54, 232, 255), 0 0 1em rgb(0, 103, 151), 0 0 0.2em rgb(18, 0, 122);
     }
     #instructions ol {
       text-align: left;
@@ -134,7 +135,16 @@
       position: absolute;
       bottom: 4.5%;
       right: 5%;
-      text-shadow: 1px 1px 2px rgb(54, 232, 255), 0 0 1em rgb(0, 103, 151), 0 0 0.2em rgb(18, 0, 122);
+      /* box-shadow: 1px 1px 2px rgb(54, 232, 255), 0 0 1em rgb(0, 103, 151), 0 0 0.2em rgb(18, 0, 122); */
+      filter: drop-shadow(1px 0px 0px rgb(54, 232, 255))
+              drop-shadow(0px 1px 2px rgb(0, 103, 151))
+              drop-shadow(0px 0px 2px rgb(18, 0, 122))
+    }
+    
+    #github-logo:hover {
+      filter: drop-shadow(1px 0px 0px rgb(64, 252, 17))
+              drop-shadow(0px 1px 0px rgb(8, 255, 140))
+              drop-shadow(1px 0px 8px rgb(0, 255, 64))
     }
 
   </style>
@@ -178,7 +188,7 @@
         Press spacebar to pause
       </li>
       <li>
-        press esc to return to the main menu
+        Press esc to return to the main menu
       </li>
     </ol>
   </div>
