--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@
         audio.pause()
       }
     }
+    function stopAudio() {
+      audio.pause()
+      count = 0
+      audio.currentTime = 0;
+    }
 
   </script>
   <script>
@@ -236,6 +241,17 @@
     setFavicon('./images/fallingUpArrow.png');
   </script>
   <script type="module" src="./src/index.js"></script>
+
+  <meta property="og:title" content="Project Title" />
+  <meta property="og:image" content="./images/click.gif" />
+  <meta
+    property="og:description"
+    content="A brief description of your project"
+  />
+  <meta
+    property="og:url"
+    content="https://programmer.github.io/project_name"
+  />
   
 </body>
 </html>
