Change meta tag img

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <script type="module" src="./src/index.js"></script>
 
   <meta property="og:title" content="Project Title" />
-  <meta property="og:image" content="./images/click.gif" />
+  <meta property="og:image" content="./images/fallingUpArrow.png" />
   <meta
     property="og:description"
     content="A brief description of your project"
