--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta property="og:title" content="Project Title" />
-  <meta property="og:image" content="./images/fallingUpArrow.png" />
+  <meta property="og:image" content="./images/click.gif" />
   <meta
     property="og:description"
     content="A brief description of your project"
