--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta property="og:title" content="Project Title" />
-  <meta property="og:image" content="./images/click.gif" />
+  <meta property="og:title" content="Click" />
+  <meta property="og:image" content="./images/clicklinkedinimg.png" />
   <meta
     property="og:description"
-    content="A brief description of your project"
+    content="Click is a JavaScript game where you can flex your clicking muscles! Based on the classic game, Dance Dance Revolution, Click consists of falling arrows that match the beat to a song, and must be pressed at the correct time"
   />
   <meta
     property="og:url"
