Add website to meta tags for linkedin

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   />
   <meta
     property="og:url"
-    content="https://programmer.github.io/project_name"
+    content="https://jmasters8.github.io/Click/"
   />
 
   <title>TuneRacer</title>
