--- a/index.html
+++ b/index.html
@@ -140,7 +140,20 @@
       height: 65px;
       position: absolute;
       bottom: 4.5%;
-      right: 5%;
+      right: 11%;
+      /* box-shadow: 1px 1px 2px rgb(54, 232, 255), 0 0 1em rgb(0, 103, 151), 0 0 0.2em rgb(18, 0, 122); */
+      filter: drop-shadow(1px 0px 0px rgb(54, 232, 255))
+              drop-shadow(0px 1px 2px rgb(0, 103, 151))
+              drop-shadow(0px 0px 2px rgb(18, 0, 122))
+    }
+
+    #linkedin-logo {
+      display: block;
+      width: 60px;
+      height: 60px;
+      position: absolute;
+      bottom: 5.2%;
+      right: 4%;
       /* box-shadow: 1px 1px 2px rgb(54, 232, 255), 0 0 1em rgb(0, 103, 151), 0 0 0.2em rgb(18, 0, 122); */
       filter: drop-shadow(1px 0px 0px rgb(54, 232, 255))
               drop-shadow(0px 1px 2px rgb(0, 103, 151))
@@ -148,6 +161,12 @@
     }
     
     #github-logo:hover {
+      filter: drop-shadow(1px 0px 0px rgb(64, 252, 17))
+              drop-shadow(0px 1px 0px rgb(8, 255, 140))
+              drop-shadow(1px 0px 8px rgb(0, 255, 64))
+    }
+
+    #linkedin-logo:hover {
       filter: drop-shadow(1px 0px 0px rgb(64, 252, 17))
               drop-shadow(0px 1px 0px rgb(8, 255, 140))
               drop-shadow(1px 0px 8px rgb(0, 255, 64))
@@ -201,6 +220,10 @@
   <a href="https://github.com/Jmasters8/TuneRacer" target='_blank'>
     <img id="github-logo" src="./images/githubLogo.png">
   </a>
+
+  <a href="https://www.linkedin.com/in/jason-masters8/" target='_blank'>
+    <img id="linkedin-logo" src="./images/linkedin.png">
+  </a>
   
   <div class="wrapper" background-color="blue">
     <canvas id="gameScreen" width="800" height="800"></canvas>
@@ -219,7 +242,6 @@
     }
     
   </script>
-  <!-- <canvas id="text" width="100" height="100"></canvas> -->
 
   <script allow="autoplay" playsinline="true" autoplay="" muted="muted">
     let audio = new Audio('./songs/Cascada.mp3');
