Change meta tag for linkedin image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta property="og:title" content="Click" />
-  <meta property="og:image" content="./images/clicklinkedinimg.png" />
+  <!-- <meta property="og:image" content="./images/clicklinkedinimg.png" /> -->
+  <meta property="og:image" content="https://i.imgur.com/tMflrYK.png" />
   <meta
     property="og:description"
     content="Click is a JavaScript game where you can flex your clicking muscles! Based on the classic game, Dance Dance Revolution, Click consists of falling arrows that match the beat to a song, and must be pressed at the correct time"
