Remove center of background position

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       width: 100%;
       background: black;
       background: url('https://st2.depositphotos.com/1310390/8819/v/600/depositphotos_88196206-stock-illustration-show-or-dance-floor-vector.jpg');
-      background-position: center;
+      /* background-position: center; */
       background-repeat: no-repeat;
       background-size: cover;
     }
