Fix pause, reset game functionality

--- a/index.html
+++ b/index.html
@@ -173,6 +173,19 @@
               drop-shadow(1px 0px 8px rgb(0, 255, 64))
     }
 
+    @media only screen and (max-height: 1035px) {
+      #title {
+        display: none;
+      }
+    }
+
+    @media only screen and (max-width: 1500px) {
+      #github-logo {
+        bottom: 12%;
+        right: 3.8%;
+      }
+    }
+
   </style>
 </head>
 <body>
