--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     content="https://jmasters8.github.io/Click/"
   />
 
-  <title>TuneRacer</title>
+  <title>Click</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
   </style>
@@ -232,7 +232,7 @@
       </li>
     </ol>
   </div>
-  <a href="https://github.com/Jmasters8/TuneRacer" target='_blank'>
+  <a href="https://github.com/Jmasters8/Click" target='_blank'>
     <img id="github-logo" src="./images/githubLogo.png">
   </a>
 
