Add pause functionality

--- a/index.html
+++ b/index.html
@@ -303,6 +303,11 @@
         audio.pause()
       }
     }
+
+    function resumeAudio() {
+      
+    }
+
     function stopAudio() {
       audio.pause()
       count = 0
