Add cacheing html tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <meta http-equiv='cache-control' content='no-cache'> 
+  <meta http-equiv='expires' content='0'> 
+  <meta http-equiv='pragma' content='no-cache'>
+
   <meta property="og:title" content="Click" />
   <meta property="og:image" content="https://i.imgur.com/tMflrYK.png" />
   <meta property="og:description"
